--- a/www/package.json
+++ b/www/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "webpack --config webpack.config.js",
+    "deploy": "rm -rf dist && npm run build && gh-pages -d dist",
     "start": "webpack-dev-server"
   },
   "repository": {
@@ -30,9 +31,10 @@
     "wasm-minidump": "file:../pkg"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^5.0.0",
+    "gh-pages": "^3.2.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "copy-webpack-plugin": "^5.0.0"
+    "webpack-dev-server": "^3.1.5"
   }
 }
